# gamma-root

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  Makefile  README.org  annotated.html  annotated_dup.js  classes.html  customdoxygen.css  dir_000000_000018.html  dir_000000_000019.html  dir_000000_000021.html  dir_000000_000022.html  dir_000001_000013.html  dir_000001_000014.html  dir_000001_000018.html  dir_000001_000019.html  dir_000001_000021.html  dir_000001_000022.html  dir_000001_000024.html  dir_000001_000025.html  dir_000002_000011.html  dir_000002_000012.html  dir_000003_000011.html  dir_000004_000012.html  dir_000005_000001.html  dir_000005_000021.html  dir_000005_000024.html  dir_000006_000001.html  dir_000006_000022.html  dir_000006_000025.html  dir_000007_000013.html  dir_000008_000014.html  dir_000009_000011.html  dir_000010_000012.html  dir_000013_000021.html  dir_000013_000024.html  dir_000014_000022.html  dir_000014_000025.html  (+412 more)
.github/workflows/: main.yml
d0/d06/: class_gam_r_1_1_nucleus_1_1_level_scheme_1_1_scheme_1_1_global_chi_square.html  class_gam_r_1_1_nucleus_1_1_level_scheme_1_1_scheme_1_1_global_chi_square.js  class_gam_r_1_1_nucleus_1_1_level_scheme_1_1_scheme_1_1_global_chi_square_a564359e77e5f015ceceb990e0e698b63_cgraph.map  class_gam_r_1_1_nucleus_1_1_level_scheme_1_1_scheme_1_1_global_chi_square_a564359e77e5f015ceceb990e0e698b63_cgraph.md5
d0/d09/: _fit_8hh__incl.map  _fit_8hh__incl.md5  _time_difference_8hh__dep__incl.map  _time_difference_8hh__dep__incl.md5
d0/d12/: class_gam_r_1_1_t_k_1_1_b_peak__inherit__graph.map  class_gam_r_1_1_t_k_1_1_b_peak__inherit__graph.md5
docs/: Doxyfile  Doxymain.md  index.md
html/: annotated.html  classes.html  dir_000000_000018.html  dir_000000_000021.html  dir_000001_000013.html  dir_000001_000018.html  dir_000001_000021.html  dir_000001_000024.html  dir_000002_000011.html  dir_000003_000011.html  dir_000005_000001.html  dir_000005_000021.html  dir_000005_000024.html  dir_000007_000013.html  dir_000009_000011.html  dir_000013_000021.html  dir_000013_000024.html  dir_000015_000013.html  dir_000015_000021.html  dir_000016_000011.html  dir_000017_000013.html  dir_000017_000021.html  dir_000017_000023.html  dir_000018_000013.html  dir_000018_000021.html  dir_000018_000024.html  dir_000021_000018.html  dir_000021_000024.html  dir_000023_000024.html  dir_031c4fc26031de218e3c67acfca35073.html  dir_0a46798c975ca2cfd2ff742a12fc5df3.html  dir_0b2f16dd70b610d17ceb32d5ec6fcfe6.html  dir_2288728dba6c23af0130f7abab0b92af.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5f096cfe902f9bc2abe3952f5e9ff649.html  dir_5f096cfe902f9bc2abe3952f5e9ff649.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6a79cfc049500787c362cfe00e651ec0.html  dir_6a79cfc049500787c362cfe00e651ec0_dep.map  (+168 more)
org/: features.org  issues.org
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+84 more)
src/lib/: CMakeLists.txt
src/lib/abbrevs/: #CMakeLists.txt#  Abbreviations.cc  Abbreviations.hh  CMakeLists.txt  gamr_abbrevs_Linkdef.h.in
src/lib/angdist/: AngCorr.cc  AngCorr.hh  AngDist.cc  AngDist.hh  CMakeLists.txt  GaussianDistr.cc  GaussianDistr.hh  PopulationParameter.cc  PopulationParameter.hh  SolidAttenuation.cc  SolidAttenuation.hh  StatTensor.cc  StatTensor.hh  TDPAD.cc  TDPAD.hh  WignerD.cc  WignerD.hh  gamr_angdist_Linkdef.h.in
src/lib/bateman/: CMakeLists.txt  Nucleus.cc  Nucleus.hh  Scheme.cc  Scheme.hh  Solver.cc  Solver.hh  gamr_bateman_Linkdef.h.in
src/lib/coulex/: CMakeLists.txt  Coulex.cc  Coulex.hh  CoulexCalculation.cc  CoulexCalculation.hh  Eloss.cc.in  Eloss.for.in  Eloss.hh  WDBSubs.for  WDBSubs.hh  gamr_coulex_Linkdef.h.in
src/lib/efficiency/: CMakeLists.txt  Efficiency.cc  Efficiency.hh  gamr_efficiency_Linkdef.h.in
src/lib/nucleus/: CMakeLists.txt  LevelScheme.cc  LevelScheme.hh  LevelSchemeDraw.cc  LevelSchemeDraw.hh  LevelSchemeFitter.cc  LevelSchemeFitter.hh  Photon.cc  Photon.hh  State.hh  Transition.cc  Transition.hh  gamr_nucleus_Linkdef.h.in
src/lib/ornl/: CMakeLists.txt  OakRidge.cc  OakRidge.hh  gamr_ornl_Linkdef.h.in
src/lib/processor/: CMakeLists.txt  TimeWalk.cc  TimeWalk.hh  gamr_processor_Linkdef.h.in
src/lib/sort/: CMakeLists.txt  CoincidenceCubeDiff.hh  CoincidenceMatrix.hh  CoincidenceMatrixPair.hh  GatedTimeDifference.hh  Matrix.hh  Sorter.cc  Sorter.hh  TimeDifference.hh  TimeDifferencePairs.hh  TimeWalkCal.hh  gamr_sort_Linkdef.h.in
src/lib/spect/: BackSub.cc  BackSub.hh  CMakeLists.txt  Calibrate.cc  Calibrate.hh  Cut.cc  Cut.hh  Display.cc  Display.hh  FFT.cc  FFT.hh  Fit.cc  Fit.hh  FitGuesses.cc.in  FitGuesses.hh  IO.cc  IO.hh  Integral.cc  Integral.hh  Transform.cc  Transform.hh  gamr_spect_Linkdef.h.in
src/lib/toolkit/: CMakeLists.txt  Gate.cc  Gate.hh  Misc.cc  Misc.hh  MonteCarlo.cc  MonteCarlo.hh  Peak.cc  Peak.hh  gamr_toolkit_Linkdef.h.in
src/lib/tree/: CMakeLists.txt  DetDefn.cc  DetDefn.hh  DetDefn.tt  Detector.cc  Detector.hh  Event.cc  Event.hh  Event.tt  ExpDefn.cc  ExpDefn.hh  ExpDefn.tt  Reader.cc  Reader.hh  Tree.hh.in  gamr_tree_Linkdef.h.in
src/lib/tree/helpers/: TreeDefnParser.py  genlinkdef.py  gentypedef.py  test.py
src/lib/utils/: CMakeLists.txt  REPL.cc  REPL.hh  RTTI.hh  Tuples.hh  Utilities.cc  Utilities.hh  gamr_utils_Linkdef.h.in
src/lib/viewer/: CMakeLists.txt  Viewer.cc  Viewer.hh  gamr_viewer_Linkdef.h.in
src/tests/: CMakeLists.txt
src/tests/bateman/: CMakeLists.txt  bateman.cc.in  mg36.scheme
src/tests/coulex/: CMakeLists.txt  coulex.cc.in
src/tests/tree/: CMakeLists.txt
src/tests/tree/pxi/: fe56_1217.ini  fe56_1217.root  fe56_converted.root  tests.cc.in
(+3919 files in other folders)
