add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sort)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/nucleus)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/angdist)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utils)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spect)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ornl)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tree)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/viewer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/toolkit)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/processor)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/efficiency)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/coulex)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/abbrevs)
if (${Boost_FOUND})
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bateman)
endif()
