add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utils)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/toolkit)
if (GAMRSORT)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sort)
endif()
if (GAMRNUCLEUS)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/nucleus)
endif()
if (GAMRANGDIST)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/angdist)
endif()
if (GAMRSPECT)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spect)
endif()
if (GAMRORNL)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ornl)
endif()
if (GAMRTREE)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tree)
endif()
if (GAMRVIEWER)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/viewer)
endif()
if (GAMRPROC)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/processor)
endif()
if (GAMREFF)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/efficiency)
endif()
if (GAMRCOULEX)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/coulex)
endif()
if (GAMRABBREVS)
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/abbrevs)
endif()
if (GAMRBATEMAN)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bateman)
endif()
